[workspace]
resolver = "2"
members = ["crates/onyums-skin"]

# Centralized, shared dependency versions for the onyums workspace.
# Members opt in with `<dep> = { workspace = true }`.
[workspace.dependencies]
anyhow = "1.0.102"
hyper = { version = "1.10.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
futures = "0.3.32"
arti-client = { version = "0.43.0", features = ["full", "static"] }
tor-cell = { version = "0.43.0", features = ["full"] }
tor-hsservice = { version = "0.43.0", features = ["full"] }
tor-proto = { version = "0.43.0", features = ["full", "stream-ctrl"] }
tor-rtcompat = { version = "0.43.0", features = ["full"] }
tor-cert = "0.43.0"
# Low-level arti crypto + onion-service identity types. Used by the Phase 1
# vanity-address miner to derive the *exact* `.onion` address arti will serve
# from a candidate ed25519 key (no second, divergent encoding). Pure Rust.
tor-llcrypto = "0.43.0"
tor-hscrypto = "0.43.0"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.13", default-features = false }
axum = { version = "0.8.9", features = ["http2"] }
tower-service = "0.3.3"
tower-layer = "0.3.3"
tracing = "0.1.44"
rcgen = "0.14.8"
tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "tls12", "ring"] }
http-body-util = "0.1.3"
bytes = "1.12.0"
safelog = "0.8.2"
tracing-subscriber = "0.3.23"
# Dev-only: request-level tests of the served Router without a live Tor network.
tower = { version = "0.5.2", features = ["util"] }
# onyums-skin: the abuse-defense layer, consumed by the server for Skin integration.
onyums-skin = { path = "crates/onyums-skin" }
# onyums-skin gate-core deps — pure Rust, no FFI (MIT/Apache).
sha2 = "0.10.9"
rand = "0.9.2"
hmac = "0.12.1"
base64 = "0.22.1"
governor = "0.10.1"
# onyums-skin WAF (Phase 3) — pure Rust signature matching. `regex` pulls in
# `aho-corasick` internally for literal prefiltering (both MIT/Apache, no FFI).
regex = "1.11.1"

[package]
name = "onyums"
version = "0.3.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/basic-automation/onyums"
readme = "README.md"
description = "An Onion-service server using axum."
keywords = ["tor", "http", "request", "server", "SOCKS"]
categories = ["network-programming", "web-programming::http-client"]

[dependencies]
anyhow = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
futures = { workspace = true }
arti-client = { workspace = true }
tor-cell = { workspace = true }
tor-hsservice = { workspace = true }
tor-proto = { workspace = true }
tor-rtcompat = { workspace = true }
tor-cert = { workspace = true }
tor-llcrypto = { workspace = true }
tor-hscrypto = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
onyums-skin = { workspace = true }
axum = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }
rcgen = { workspace = true }
tokio-rustls = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
safelog = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tower = { workspace = true }
