[workspace]
resolver = "2"
members = ["crates/onyums-skin"]

# Centralized, shared dependency versions for the onyums workspace.
# Members opt in with `<dep> = { workspace = true }`.
[workspace.dependencies]
# 1.0.103 is a security floor, not a routine bump: 1.0.102 is affected by
# RUSTSEC-2026-0190 — `Error::context` followed by `Error::downcast_mut` violates
# borrow rules and is undefined behaviour. onyums threads `anyhow::Error` through
# every fallible path (`setup_tor_client`, `launch_onion_service`, the builder), so
# this is squarely in the tree. Enforced by `cargo deny check advisories` in CI.
anyhow = "1.0.103"
hyper = { version = "1.10.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
futures = "0.3.32"
arti-client = { version = "0.44.0", features = ["full", "static"] }
tor-cell = { version = "0.44.0", features = ["full"] }
tor-hsservice = { version = "0.44.0", features = ["full"] }
tor-proto = { version = "0.44.0", features = ["full", "stream-ctrl"] }
tor-rtcompat = { version = "0.44.0", features = ["full"] }
tor-cert = "0.44.0"
# Low-level arti crypto + onion-service identity types. Used by the Phase 1
# vanity-address miner to derive the *exact* `.onion` address arti will serve
# from a candidate ed25519 key (no second, divergent encoding). Pure Rust.
tor-llcrypto = "0.44.0"
tor-hscrypto = "0.44.0"
# Phase 1 identity — pure-Rust QR encoding for the `.onion` address (terminal +
# SVG renderers). `default-features = false` drops the `image` renderer (and its
# heavy `image`/`png` tree); only the always-available unicode renderer and the
# pure-string `svg` renderer are kept. No FFI.
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.13", default-features = false }
axum = { version = "0.8.9", features = ["http2"] }
tower-service = "0.3.3"
tower-layer = "0.3.3"
tracing = "0.1.44"
rcgen = "0.14.8"
# Phase 2 — scrub x25519 client-auth secret key material on drop. Pure Rust, no FFI
# (MIT/Apache); already in the tree transitively via the dalek/arti crypto stack, so
# adding it direct introduces no new version.
zeroize = "1.8"
tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "tls12", "ring"] }
http-body-util = "0.1.3"
bytes = "1.12.0"
safelog = "0.9.0"
tracing-subscriber = "0.3.23"
# Dev-only: request-level tests of the served Router without a live Tor network.
tower = { version = "0.5.2", features = ["util"] }
# onyums-skin: the abuse-defense layer, consumed by the server for Skin integration.
# The `version` is not redundant with `path`: crates.io rejects a path-only dependency,
# so a path-only entry here would make `cargo publish` of onyums fail (ROADMAP
# cross-cutting — "Sync crates.io with GitHub"). With both, local builds resolve
# through the path and a published onyums depends on onyums-skin 0.1.x from the
# registry. Enforced by `cargo deny check bans` (wildcard dependency).
onyums-skin = { path = "crates/onyums-skin", version = "0.1.0" }
# onyums-skin gate-core deps — pure Rust, no FFI (MIT/Apache).
sha2 = "0.10.9"
rand = "0.9.2"
hmac = "0.12.1"
base64 = "0.22.1"
# `default-features = false` drops governor's `jitter` feature, which skin does not use
# (`ratelimit.rs` takes `DefaultKeyedRateLimiter` + `Quota` and no `Jitter`). Jitter is the
# *only* thing pulling `rand`/`getrandom` into governor's subtree — its `rand` dep is
# optional — so turning it off removes one of the three reverse deps on `rand` 0.9 and
# drops `getrandom`'s `wasm_js`, which is dead weight on a server. The other three default
# features are kept **deliberately**: `quanta` because it selects governor's `DefaultClock`
# (dropping it silently swaps the limiter's clock for `MonotonicClock`), `dashmap` because
# `DefaultKeyedRateLimiter`'s state store is a `DashMap`, and `std` for the rest.
# This does not by itself remove `rand` 0.9 from the tree — onyums and onyums-skin still
# depend on it directly; see the ROADMAP's dependency-tree item.
governor = { version = "0.10.1", default-features = false, features = ["std", "dashmap", "quanta"] }
# onyums-skin WAF (Phase 3) — pure Rust signature matching. `regex` pulls in
# `aho-corasick` internally for literal prefiltering (both MIT/Apache, no FFI).
regex = "1.11.1"
# onyums-skin Phase 5 optional PoW backend — Tor's own Equi-X puzzle, pure Rust.
# LGPL-3.0, so it is gated behind onyums-skin's opt-in `equix` cargo feature to keep
# the default build copyleft-free. `default-features = false` selects HashX's portable
# interpreter (no runtime code generation / executable pages); the optional pure-Rust
# JIT is reachable via the `equix/compiler` feature. No FFI in any configuration.
equix = { version = "0.6.2", default-features = false }

[package]
name = "onyums"
version = "0.3.1"
edition = "2024"
# Minimum supported Rust version. Not a guess: 1.91 is the floor cargo's own
# resolver enforces — `arti-client@0.44.0`, `caret@0.10.0`, and `fs-mistrust@0.15.0`
# all declare `rust-version = 1.91`, so 1.90 is refused outright. Verified by
# building the lib on each toolchain: 1.91 green, 1.90 refused. Edition 2024 alone
# would only need 1.85 — the arti stack, not the edition, sets this floor, and the
# 0.43 -> 0.44 bump is what moved it from 1.90. Enforced in CI.
rust-version = "1.91"
license = "MIT"
repository = "https://github.com/basic-automation/onyums"
readme = "README.md"
description = "An Onion-service server using axum."
keywords = ["tor", "onion-service", "axum", "server", "arti"]
categories = ["network-programming", "web-programming::http-server"]

[dependencies]
anyhow = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
futures = { workspace = true }
arti-client = { workspace = true }
tor-cell = { workspace = true }
tor-hsservice = { workspace = true }
tor-proto = { workspace = true }
tor-rtcompat = { workspace = true }
tor-cert = { workspace = true }
tor-llcrypto = { workspace = true }
tor-hscrypto = { workspace = true }
qrcode = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
onyums-skin = { workspace = true }
axum = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }
rcgen = { workspace = true }
zeroize = { workspace = true }
tokio-rustls = { workspace = true }
http-body-util = { workspace = true }
bytes = { workspace = true }
safelog = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tower = { workspace = true }
