[package]
name = "onyums-skin"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/basic-automation/onyums"
readme = "README.md"
description = "A 'Cloudflare for Tor' abuse-defense layer for onion services: challenge/PoW gate, stateless clearance tokens, token/circuit-keyed rate limiting, no-JS fallbacks."
keywords = ["tor", "ddos", "captcha", "proof-of-work", "waf"]
categories = ["web-programming", "network-programming"]

[dependencies]
axum = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
governor = { workspace = true }
regex = { workspace = true }
http-body-util = { workspace = true }
tower-service = { workspace = true }
tower-layer = { workspace = true }
# Phase 5 optional PoW backend (Tor's Equi-X). Pure Rust, but LGPL-3.0, so it is
# gated behind the `equix` feature below to keep the default build copyleft-free.
equix = { workspace = true, optional = true }

[features]
# Opt-in EquiX proof-of-work backend ([`challenge::equix::EquiX`]). Off by default:
# enabling it pulls in the LGPL-3.0 `equix` crate. Pure Rust either way.
equix = ["dep:equix"]
# Reach EquiX's pure-Rust runtime JIT (faster client-side solving, at the cost of
# executable memory pages). Implies the `equix` backend.
equix-compiler = ["equix", "equix/compiler"]

[dev-dependencies]
tokio = { workspace = true }
